# au_uav_pkg_groovy

./: .gitignore  .gitignore.orig  README.md
Documentation/: Robustness Ideas
src/au_uav_gui/: CMakeLists.txt  CMakeLists.txt~  TelemetryUpdate.h  mainpage.dox  package.xml  package.xml~
src/au_uav_gui/include/au_uav_gui/: constants.h  flightvisualization.hpp  missionplanner.hpp  qnode.hpp
src/au_uav_gui/msg/: Telemetry.msg
src/au_uav_gui/msg_gen/cpp/include/AU_UAV_GUI/: TelemetryUpdate.h
src/au_uav_gui/msg_gen/lisp/: AU_UAV_GUI-msg.asd  _package.lisp  _package_TelemetryUpdate.lisp
src/au_uav_gui/resources/html_files/: google_maps.html
src/au_uav_gui/src/: flightvisualization.cpp  flightvisualization.cpp~  jsinterface.cpp  main.cpp  mainwindow.cpp  mainwindow.cpp~  missiongenerator.cpp  missionplanner.cpp  missionplanner.cpp~  qnode.cpp
src/au_uav_gui/srv_gen/cpp/include/AU_UAV_GUI/: SendFilePath.h
src/au_uav_gui/ui/: mainwindow.ui
src/au_uav_pkg/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/au_uav_ros/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt.user~  CMakeLists.txt~  mainpage.dox  mavgen.py  package.xml  package.xml~
src/au_uav_ros/courses/: AT.course  Australia.course  TT.course  TT2.course  auburnSimpleTest.course  phil.course  tt3.course  ttcol.course  ttcol2.course
src/au_uav_ros/courses/evaluator/: base.txt
src/au_uav_ros/evaluator/: auto  automator.cpp  gen  generator.cpp
src/au_uav_ros/include/au_uav_ros/: GPSErrorSimulation.h  GPSErrorSimulation.h~  PlaneCoordinator.h  PlaneCoordinator.h~  SimulatedPlane.h  SimulatedPlane.h~  Simulation.h  Simulation.h~  WindSimulation.h  WindSimulation.h~  collisionAvoidance.h  collisionAvoidance.h.orig  coordinator.h  coordinator.h.orig  dangerGrid.h  discretizedPlane.h  evaluator.h  fsa.h  gridSquare.h  guiInterfacer.h  ipn.h  mapSearchNode.h  mapTools.h  pathLogger.h  planeBuilder.h  planeObject.h  planeObject.h~  position.h  prar.h  ripna.h  ripna.h~  simPlaneObject.h  simulator.h  standardDefs.h  standardDefs.h~  standardFuncs.h  standardFuncs.h~  stlastar.h  vector2D.h  vmath.h  (+3 more)
src/au_uav_ros/include/mavlink/v1.0/common/: common.h  mavlink_msg_au_reu_uav.h  mavlink_msg_au_uav.h  testsuite.h  version.h
src/au_uav_ros/launch/: evaluation.launch  guiDriven.launch  launch.launch  launch.launch.orig
src/au_uav_ros/mavlink-generator/message_definitions/v1.0/: mavlink_msg_au_reu_uav.xml
src/au_uav_ros/message_definitions/: common.xml
src/au_uav_ros/msg/: Command.msg
src/au_uav_ros/scores/: distance.calc  gnuplot.data  gps.calc  turning.calc
src/au_uav_ros/src/: ControlMenu.cpp  ControlMenu.cpp~  KMLCreator.cpp  KMLCreator.cpp~  XbeeIO.cpp  XbeeIO.cpp~  astar_sparse0.cpp  collisionAvoidance.cpp  collisionAvoidance.cpp.orig  collisionAvoidance.cpp~  coordinator.cpp  coordinator.cpp.orig  coordinator.cpp~  dangerGrid.cpp  discretizedPlane.cpp  evaluator.cpp  evaluator.cpp~  gridSquare.cpp  guiInterfacer.cpp  guiInterfacer.cpp~  ipn.cpp  ipn.cpp.orig  mapSearchNode.cpp  mapTools.cpp  myastar.cpp  planeBuilder.cpp  planeObject.cpp  planeObject.cpp~  position.cpp  prar.cpp  ripna.cpp  ripna.cpp~  simPlaneObject.cpp  simulator.cpp  simulator.cpp~  standardDefs.cpp  standardFuncs.cpp  standardFuncs.cpp~  test.cpp  vector2D.cpp  (+6 more)
src/au_uav_ros/src/a_star/: DiscretizedPlane.h  Position.h  astar_sparse0.cpp  collisionAvoidance.cpp  coordinator.cpp  dangerGrid.h  gridSquare.h  mapSearchNode.h  map_tools.h  pathLogger.h  prar.cpp
src/au_uav_ros/src/au_uav_ros/: GPSErrorSimulation.cpp  GPSErrorSimulation.cpp~  PlaneCoordinator.cpp  PlaneCoordinator.cpp~  SimulatedPlane.cpp  SimulatedPlane.cpp~  Simulation.cpp  Simulation.cpp~  WindSimulation.cpp  WindSimulation.cpp~  standardDefs.cpp  standardDefs.cpp~
src/au_uav_ros/srv/: Ack.srv  AddPlane.srv  Centralize.srv  Double.srv  ExitCommand.srv  Listen.srv  LoadCourse.srv  Plane.srv  RemovePlane.srv  SimPlane.srv  Wp.srv
