<?xml version="1.0"?>
<package>
  <name>au_uav_ros</name>
  <version>0.0.0</version>
  <description>The au_uav_ros package</description>

  <maintainer email="craig.fisher@scranton.edu">Craig Fisher</maintainer>
  <maintainer email="jzt0011@auburn.edu">Jonathan Taylor</maintainer>

  <license>TODO</license>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>au_uav_gui</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
